# ServiceX_DID_Demo

./: .gitignore  Dockerfile  README.md  ServiceX_DID-1.0.0a1-py3-none-any.whl  pyproject.toml  requirements.txt
.github/workflows/: publish.yaml
sample/: simple_query.ipynb
scripts/: use_demo.py
src/: demo_did.py
