[tool.poetry]
name = "ServiceX_DID_demo"
version = "0.1.0"
description = "Demo/Tempalte package for a ServiceX DID Finder"
authors = ["Gordon Watts <gwatts@uw.edu>"]
license = "Apache License 2.0"

[tool.poetry.dependencies]
python = ">=3.8,<3.9"
ServiceX_DID = {path = "I:/gwatts/Code/irishep/ServiceX_DID", develop = true}

[tool.poetry.dev-dependencies]
pytest = "^6.2.3"
func-adl-servicex = "^1.0.3"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
